🐞fix: background image not showing

--- a/gradie-sign-up/index.css
+++ b/gradie-sign-up/index.css
@@ -17,7 +17,7 @@ html {
   scroll-behavior: smooth !important;
   box-sizing: border-box;
   background-color: var(--bg-color);
-  background-image: url('./assets/Background.png');
+  background-image: url('./Assets/Background.png');
   background-repeat: no-repeat;
   background-size: cover;
 }
